[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UserInterface/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=5]
[ext_resource path="res://src/Screens/MainScreen.gd" type="Script" id=6]
[ext_resource path="res://src/UserInterface/MenuBackgroundSound.tscn" type="PackedScene" id=7]

[node name="MainScreen" type="Control"]
margin_right = 1016.0
margin_bottom = 600.0
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 4 )]
margin_top = 96.0
margin_bottom = 153.0
text = "My First Godot Game"

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.0
margin_top = 4.0
margin_right = 123.0
margin_bottom = 100.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="Menu" instance=ExtResource( 2 )]
margin_right = 246.0
margin_bottom = 46.0
next_scene_path = "res://src/Levels/Level01.tscn"

[node name="QuitButton" parent="Menu" instance=ExtResource( 1 )]
margin_top = 50.0
margin_right = 246.0
margin_bottom = 96.0

[node name="MenuBackgroundSound" parent="." instance=ExtResource( 7 )]

[node name="nameText" type="LineEdit" parent="."]
margin_left = 464.0
margin_top = 200.0
margin_right = 656.0
margin_bottom = 241.0
max_length = 5
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -92.0
margin_right = -59.0
margin_bottom = -61.0
text = "Name:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="nameText" to="." method="_on_nameText_text_changed"]
[connection signal="text_entered" from="nameText" to="." method="_on_LineEdit_text_entered"]
